--- a/ubuntu/docker-compose.yml
+++ b/ubuntu/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: example
     network_mode: "host"
     env_file:
-      - ".env"
+      - "../.env"
 
   adminer:
     image: adminer
@@ -19,9 +19,9 @@ services:
   tgbot:
     container_name: bot
     build:
-      context: .
+      context: ..
     command: python app.py
     restart: always
 
     env_file:
-      - ".env"
+      - "../.env"
